added logo in login page and fixed the login's body's min width

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 
 <body>
     <div class="container-fluid">
-        <div class="card">
+        <header>
+            <img src="icons/logo.png" alt="Logo">
+        </header>
+        <main class="card">
             <header class="card-title">
                 <h1>Faça Seu Login</h1>
             </header>
@@ -40,7 +43,7 @@
                     <button class="btn btn-success" id="login">Entrar</button>
                 </form>
             </main>
-        </div>
+        </main>
     </div>
 </body>
 
