--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
                 <form autocomplete="off">
                     <div id="e-mail-input">
                         <label for="e-mail">Seu e-mail</label>
+                        <span></span>
                         <input type="e-mail" class="form-control" id="e-mail">
                     </div>
 
                     <div id="password-input">
                         <label for="password">Sua Senha</label>
+                        <span></span>
                         <input type="password" class="form-control" id="password">
                     </div>
                     <a href="forgot-password.html" id="forgot-password">Esqueci Minha Senha</a>
