aletred the about-me text

--- a/about-me.html
+++ b/about-me.html
@@ -18,16 +18,28 @@
         </header>
         <main id="corpo">
             <h1>Lucas Kluska Donini</h1>
-            <p>Lucas Kluska Donini é um estudante dedicado de Desenvolvimento de Sistemas na Germinare Tech, onde
-                aprimora suas habilidades técnicas e busca constantemente novos desafios na área de tecnologia.
-                <br>
-                Este projeto, Cardápio de Filmes, foi desenvolvido como parte de suas atividades acadêmicas, com o
-                objetivo de unir organização e acessibilidade em um formato digital prático. A proposta visa facilitar a
-                descoberta e seleção de filmes, apresentando-os de maneira clara e categorizada, refletindo tanto seu
-                interesse por programação quanto pela cultura cinematográfica.
-                <br>
-                Com uma abordagem minimalista e funcional, o projeto demonstra sua capacidade de transformar conceitos
-                em soluções digitais eficientes, alinhadas com as demandas contemporâneas de usabilidade e design.
+            <p>
+                Nunca imaginei que um dia eu aprenderia programação, muito menos que em menos de cinco meses de aula eu
+                seria capaz de criar um site minimamente funcional. No entanto, aqui estou, estudando na Germinare Tech
+                e mergulhando de cabeça no universo da tecnologia. Ao longo desse tempo, tive contato com diversas
+                linguagens de programação, como Java, Python, HTML, CSS, SQL e até um pouco de JavaScript por iniciativa
+                própria. Cada nova linguagem representa um desafio e, ao mesmo tempo, uma oportunidade de expandir meus
+                conhecimentos e habilidades.
+                <br><br>
+                Antes de começar a estudar programação, eu via esse mundo como algo distante e quase impossível de
+                entender. Sempre que via programadores em filmes, eles estavam diante de telas cheias de códigos
+                indecifráveis, com letras verdes caindo em cascata, digitando a uma velocidade impressionante. Quando
+                finalmente tive meu primeiro contato real com programação, percebi que a realidade era bem diferente:
+                trata-se de lógica, criatividade, paciência e, principalmente, persistência para resolver problemas e
+                encontrar soluções.
+                <br><br>
+                Hoje, sinto orgulho de cada pequena conquista, desde o primeiro "Hello, World!" até a criação deste
+                site. A cada linha de código, percebo o quanto evoluí e o quanto ainda posso aprender. Meu objetivo é
+                continuar me dedicando aos estudos, absorvendo o máximo de conhecimento possível sobre programação e
+                tecnologia. Quero me tornar um profissional versátil, capaz de atuar em diferentes áreas e contribuir de
+                forma significativa para qualquer equipe ou projeto em que eu esteja envolvido. Acredito que, com
+                dedicação e curiosidade, posso alcançar resultados incríveis e transformar desafios em oportunidades de
+                crescimento.
             </p>
         </main>
     </div>
