reorganized the js and added smaller alterations to css

--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
 
             <main class="card-body">
                 <form autocomplete="off">
-                    <div id="e-mail-input">
+                    <div id="email-input">
                         <label for="e-mail">Seu e-mail</label>
                         <span></span>
-                        <input type="e-mail" class="form-control" id="e-mail">
+                        <input type="e-mail" class="form-control default" id="e-mail">
                     </div>
 
                     <div id="password-input">
                         <label for="password">Sua Senha</label>
                         <span></span>
-                        <input type="password" class="form-control" id="password">
+                        <input type="password" class="form-control default" id="password">
                     </div>
                     <a href="forgot-password.html" id="forgot-password">Esqueci Minha Senha</a>
 
