improved login function

--- a/main-page.html
+++ b/main-page.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
     <script src='https://code.jquery.com/jquery-3.7.1.min.js'></script>
     <script src="scripts/main-page.js" defer></script>
+    <script src="scripts/profile.js" defer></script>
     <title>KluskaFlix</title>
 </head>
 
@@ -19,7 +20,7 @@
             <section id="profile">
                 <div>
                     <img src="icons/profile-pic.png" alt="profile picture" id="profile-picture">
-                    <p>lkd.lucas@gmail.com</p>
+                    <p></p>
                 </div>
                 <button class="btn btn-danger" id="logout">Logout</button>
             </section>
