feat: change link to about-me page for a external link to an about me page

--- a/main-page.html
+++ b/main-page.html
@@ -179,7 +179,7 @@
       </table>
     </main>
     <footer>
-      <a href="about-me.html" id="about-me">Sobre o Criador</a>
+      <a href="https://lucasdonini.github.io/portifolio-ds1/" target="_blank" id="about-me">Sobre o Criador</a>
     </footer>
   </div>
 </body>
